--- a/client/index.html
+++ b/client/index.html
@@ -59,18 +59,14 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p>&copy; The Ponti 2016</p>
       </footer>
 
     </div> <!-- /container -->
-        <script src="//code.highcharts.com/highcharts.js"></script>
-        <script src="//code.highcharts.com/highcharts-more.src.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
+        <script src="js/vendor/highcharts.js"></script>
+        <script src="js/vendor/numeral.js"></script>
+        <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
-
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
