--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,7 @@
     </div> <!-- /container -->
         <script src="js/vendor/highcharts.js"></script>
         <script src="js/vendor/numeral.js"></script>
+        <script src="js/vendor/pouchdb.js"></script>
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
