Add lodash and highcharts from CDN

--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1 id="net-worth"></h1>
+        <div id="net-worth-over-time"></div>
       </div>
     </div>
 
@@ -63,10 +64,13 @@
       </footer>
 
     </div> <!-- /container -->
-        <script src="js/vendor/highcharts.js"></script>
+        <script src="js/vendor/jquery-1.11.2.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/lodash/4.6.1/lodash.min.js"></script>
         <script src="js/vendor/numeral.js"></script>
         <script src="js/vendor/pouchdb.js"></script>
-        <script src="js/vendor/jquery-1.11.2.min.js"></script>
+        <script src="https://code.highcharts.com/highcharts.js"></script>
+        <script src="https://code.highcharts.com/modules/data.js"></script>
+        <script src="https://code.highcharts.com/modules/exporting.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/main.js"></script>
 
