--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,7 @@
         <script src="js/vendor/jquery-1.11.2.min.js"></script>
         <script src="https://cdn.jsdelivr.net/lodash/4.6.1/lodash.min.js"></script>
         <script src="js/vendor/numeral.js"></script>
+        <script src="js/vendor/pouchdb.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/modules/data.js"></script>
         <script src="https://code.highcharts.com/modules/exporting.js"></script>
